# streamlit-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
streamlit_agent/: basic_memory.py  basic_streaming.py  chat_pandas_df.py  chat_with_documents.py  chat_with_sql_db.py  clear_results.py  minimal_agent.py  mrkl_demo.py  search_and_chat.py  simple_feedback.py  st_feedback.py  web_explorer.py
streamlit_agent/callbacks/: capturing_callback_handler.py
streamlit_agent/runs/: alanis.pickle  leo.pickle
