[tool.poetry]
name = "streamlit-agent"
version = "0.1.0"
description = ""
authors = ["Tim Conkling <tconkling@gmail.com>", "Joshua Carroll <joshua.carroll@snowflake.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "streamlit_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = {extras = ["docarray"], version = "^0.0.234"}
openai = "^0.27.8"
duckduckgo-search = "^3.8.3"
streamlit = {path = "streamlit-1.24.1-py2.py3-none-any.whl"}
pypdf = "^3.12.2"
sentence-transformers = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
